--- a/dart/chompfile.toml
+++ b/dart/chompfile.toml
@@ -1,6 +1,8 @@
 version = 0.1
 default-task = 'build'
 
+extensions = ['../cmp-extension.js']
+
 [env]
 BLUE = '\033[0;34m'
 NC = '\033[0m'
@@ -24,9 +26,10 @@ deps = ['./bin/dart.exe']
 [[task]]
 name = 'interpret'
 dep = './bin/dart.exe'
-run = '''
-	cat ../ff/example_v0.ff | ./bin/dart.exe | cmp --s - "../ff/example_v0.out"
-'''
+run = 'cat ../ff/example_v0.ff | ./bin/dart.exe'
+template = 'cmp'
+[task.template-options]
+cmp = '../ff/example_v0.out'
 
 [[task]]
 name = 'build-deno-compiler'
