--- a/racket/chompfile.toml
+++ b/racket/chompfile.toml
@@ -12,50 +12,51 @@ GRN = '\033[0;32m'
 
 [[task]]
 target = './build/#'
-deps = ['./#.rkt']
+deps = ['./#.rkt', './**/*.rkt']
 run = '''
-  raco exe -o $TARGET $DEP
+  raco exe --gui -o $TARGET $DEP
 '''
 
 [[task]]
 name = 'build'
-deps = ['./build/ff-test']
+deps = ['./build/example']
 
 [[task]]
 name = 'interpret'
-deps = ['./build/ff-test']
-run = './build/ff-test'
+deps = ['./build/example']
+run = './build/example'
 template = 'cmp'
 [task.template-options]
 cmp = '../ff/example_v0.out'
 
 [[task]]
 name = 'test'
-deps = [':interpret',]
+deps = [':interpret']
 serial = true
 display = 'none'
 
 [[task]]
+display = 'none'
 name = 'build-deno-compiler'
-run = 'chomp -c ../deno/ :build:compile'
+run = 'chomp -c ../deno/ :disassemble'
 
 [[task]]
 name = 'ff'
 deps = [
-    '../ff/##.out',
-    'build-deno-compiler',
+  '../build/disassemble/##.ff',
+  'build-deno-compiler',
 ]
+target = '../ff/##.out'
 serial = true
 invalidation = 'always'
 validation = 'none'
 display = 'status-only'
 run = '''
-  shopt -s nullglob
-  shopt -s extglob
-  for i in "${DEP%.*}.ff?(p)"; do
-    ../deno/build/compile $i --opt --disassemble | ./ff.sh | cmp - $DEP -s && ${{CHECK}};
-  done
+  racket ./ff.rkt $DEP
 '''
+template = 'cmp'
+[task.template-options]
+cmp = '$TARGET'
 
 [[task]]
 name = 'clean'
