--- a/deno/chompfile.toml
+++ b/deno/chompfile.toml
@@ -24,10 +24,10 @@ run = '''
 [[task]]
 name = 'build'
 deps = [
-    './build/compile',
-    './build/run',
-    './build/execute',
-    './build/preprocess',
+    'build:compile',
+    'build:run',
+    'build:execute',
+    'build:preprocess',
 ]
 
 [[task]]
@@ -114,4 +114,16 @@ run = '''
   for i in "${DEP%.*}.ff?(p)"; do
     ./build/preprocess $i > $TARGET
   done
+'''
+
+[[task]]
+name = 'bench'
+deps = ['build:run', 'build:execute']
+validation = 'none'
+serial = true
+run = '''
+  hyperfine --warmup 3 -N \
+    './build/run ../ff/example.ff'\
+    './build/run ../ff/example.ff --opt'\
+    './build/execute ../ff/example.ffb'
 '''
