--- a/go/chompfile.toml
+++ b/go/chompfile.toml
@@ -11,6 +11,7 @@ BLUE = '\033[0;34m'
 CHECK = 'printf "  ${GRN}OK${NC} " || printf "  ${RED}FAIL${NC} "'
 
 [[task]]
+name = 'build:##'
 target = './build/##'
 deps = [
     './cmd/##',
@@ -24,10 +25,10 @@ run = '''
 [[task]]
 name = 'build'
 deps = [
-    './build/compile',
-    './build/execute',
-    './build/run',
-    './build/repl',
+    'build:compile',
+    'build:execute',
+    'build:run',
+    'build:repl',
 ]
 
 [[task]]
@@ -50,7 +51,7 @@ cmp = '../ff/example.ffb'
 name = 'execute'
 dep = './build/execute'
 run = '''
-	cat ../ff/example.ffb | ./build/execute
+	./build/execute --in ../ff/example.ffb
 '''
 template = 'cmp'
 [task.template-options]
@@ -101,3 +102,15 @@ name = 'clean'
 run = '''
   rm -rf ./build
 '''
+
+[[task]]
+name = 'bench'
+deps = ['build:run', 'build:execute']
+validation = 'none'
+serial = true
+run = '''
+  hyperfine --warmup 3 -N \
+    './build/execute --in ../ff/example.ffb'\
+    './build/run --in ../ff/example.ff'
+'''
+
