--- a/cpp/chompfile.toml
+++ b/cpp/chompfile.toml
@@ -25,7 +25,7 @@ deps = ['build:run', 'build:fact']
 [[task]]
 name = 'interpret'
 dep = 'build:run'
-run = 'cat ../ff/example.ff | ./build/run'
+run = './build/run ../ff/example.ff'
 template = 'cmp'
 [task.template-options]
 cmp = '../ff/example.out'
@@ -58,7 +58,7 @@ invalidation = 'always'
 validation = 'none'
 display = 'status-only'
 run = '''
-  cat $DEP | ./build/run
+  ./build/run %DEP
 '''
 template = 'cmp'
 [task.template-options]
@@ -76,7 +76,7 @@ deps = ['build:run', 'build:fact']
 validation = 'none'
 serial = true
 run = '''
-  hyperfine --warmup 3 \
-    'cat ../ff/example.ff | ./build/run'\
+  hyperfine --warmup 3 -N\
+    './build/run ../ff/example.ff'\
     './build/fact'
 '''
