--- a/deno/chompfile.toml
+++ b/deno/chompfile.toml
@@ -96,6 +96,7 @@ run = '''
 name = 'disassemble'
 deps = ['../ff/##.out', '../ff/**/*.*', './build/compile']
 target = '../build/disassemble/##.ff'
+display = 'init-only'
 run = '''
   shopt -s nullglob
   shopt -s extglob
@@ -108,6 +109,7 @@ run = '''
 name = 'preprocess'
 deps = ['../ff/##.out', '../ff/**/*.*', './build/preprocess']
 target = '../build/preprocess/##.ff'
+display = 'init-only'
 run = '''
   shopt -s nullglob
   shopt -s extglob
