--- a/racket/chompfile.toml
+++ b/racket/chompfile.toml
@@ -37,21 +37,40 @@ run = '''
 '''
 
 [[task]]
-name = 'interpret'
-deps = ['./build/example']
-run = './build/example'
+name = 'test:interpret'
+run = '''
+./main.rkt ../ff/example.ff
+'''
+template = 'cmp'
+[task.template-options]
+cmp = '../ff/example.out'
+
+[[task]]
+name = 'test:compile'
+run = '''
+	./main.rkt --compile ../ff/example.ff
+'''
+template = 'cmp'
+[task.template-options]
+cmp = '../ff/example.ffb'
+
+[[task]]
+name = 'test:execute'
+run = '''
+	./main.rkt ../ff/example.ffb
+'''
 template = 'cmp'
 [task.template-options]
 cmp = '../ff/example.out'
 
 [[task]]
 name = 'test'
-deps = [':interpret', ':ff']
+deps = ['test:compile', 'test:execute', 'test:interpret', 'test:ff']
 serial = true
 display = 'none'
 
 [[task]]
-name = 'ff'
+name = 'test:ff'
 deps = [
   '../ff/##.out',
   'make:main'
@@ -81,10 +100,10 @@ deps = ['build', ':exe:fact']
 validation = 'none'
 serial = true
 run = '''
-  hyperfine --warmup 3\
+  hyperfine --warmup 3 -N\
     './build/fact' \
     './build/example'\
     'racket ./example.rkt'\
     'racket main.rkt ../ff/example.ff'\
-    'racket main.rkt --no-pp ../ff/example.ff'
+    'racket main.rkt --pp ../ff/example.ff'
 '''
