--- a/racket/chompfile.toml
+++ b/racket/chompfile.toml
@@ -102,6 +102,7 @@ serial = true
 run = '''
   hyperfine --warmup 3 -N\
     './build/fact' \
+    'racket main.rkt ../ff/example.ffb'\
     './build/example'\
     'racket ./example.rkt'\
     'racket main.rkt ../ff/example.ff'\
