--- a/chompfile.toml
+++ b/chompfile.toml
@@ -56,7 +56,7 @@ run = '''
 
 [[task]]
 name = 'bench'
-deps = ['build:ghc', 'build:deno', 'build:go', 'build:cpp', 'build:dart', 'build:racket']
+deps = ['build:ghc', 'build:deno', 'build:go', 'build:cpp', 'build:dart', 'build:racket', 'build:rust']
 validation = 'none'
 serial = true
 run = '''
@@ -65,6 +65,7 @@ run = '''
     './cpp/build/fact' -n watermark\
     './go/build/execute --in ./ff/example.ffb' -n go\
     './cpp/build/run ./ff/example.ff' -n cpp\
+    './rust/build/example0' -n rust\
     'cat ./ff/example_v0.ff | ./dart/bin/dart.exe' -n dart\
     'cat ./ff/example.ff | ./python/execute.py' -n python\
     './deno/build/execute ./ff/example.ffb' -n deno\
@@ -89,7 +90,7 @@ run = '''
 
 [[task]]
 name = 'bench:interp'
-deps = ['build:deno', 'build:go', 'build:cpp', 'build:dart', 'build:racket']
+deps = ['build:deno', 'build:go', 'build:cpp', 'build:dart', 'build:racket', 'build:rust']
 validation = 'none'
 serial = true
 run = '''
@@ -97,6 +98,7 @@ run = '''
     './deno/build/run ./ff/example.ff'\
     './go/build/run --in ./ff/example.ff'\
     './cpp/build/run ./ff/example.ff'\
+    './rust/build/example0' -n rust\
     'cat ./ff/example_v0.ff | ./dart/bin/dart.exe'\
     'cat ./ff/example.ff | ./python/execute.py'\
     'cat ./ff/example.ff | ./ruby/execute.rb'\
