--- a/assemblyscript/asconfig.json
+++ b/assemblyscript/asconfig.json
@@ -11,12 +11,10 @@
       "textFile": "build/release.wat",
       "sourceMap": true,
       "optimizeLevel": 3,
-      "shrinkLevel": 0,
+      "shrinkLevel": 0,  
       "converge": false,
       "noAssert": false
     }
   },
-  "options": {
-    "bindings": "esm"
-  }
+  "extends": "./node_modules/@assemblyscript/wasi-shim/asconfig.json"
 }
