--- a/assemblyscript/asconfig.json
+++ b/assemblyscript/asconfig.json
@@ -1,14 +1,8 @@
 {
   "targets": {
-    "debug": {
-      "outFile": "build/debug.wasm",
-      "textFile": "build/debug.wat",
-      "sourceMap": true,
-      "debug": true
-    },
-    "release": {
-      "outFile": "build/release.wasm",
-      "textFile": "build/release.wat",
+    "index": {
+      "outFile": "build/index.wasm",
+      "textFile": "build/index.wat",
       "sourceMap": true,
       "optimizeLevel": 3,
       "shrinkLevel": 0,  
