--- a/wasm/package.json
+++ b/wasm/package.json
@@ -9,6 +9,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bats": "^1.10.0",
     "wasi": "^0.0.6"
+  },
+  "devDependencies": {
+    "bats-assert": "github:ztombol/bats-assert",
+    "bats-support": "github:ztombol/bats-support"
   }
 }
